--- a/projectgeneral/templates/contact.html
+++ b/projectgeneral/templates/contact.html
@@ -277,10 +277,9 @@
 
                         <!--Contact Information List Start-->
                         <ul class="contact-info-list">
-                            <li><i class="fa fa-map-marker"></i> 14 Tottenham Road, London, England.</li>
-                            <li><i class="fa fa-phone"></i> (102) 6666 8888</li>
-                            <li><i class="fa fa-envelope"></i> <a href="#">info@zooka.io</a></li>
-                            <li><i class="fa fa-fax"></i> (102) 8888 9999</li>
+                            <li><i class="fa fa-map-marker"></i> Azerbaijan, Baku City</li>
+                            <li><i class="fa fa-phone"></i> 070-852-74-90</li>
+                            <li><i class="fa fa-envelope"></i> <a href="#">ebulzade@inbox.ru</a></li>
                             <li><i class="fa fa-clock-o"></i> Mon – Sat: 9:00 – 18:00</li>
                         </ul>
                         <!--Contact Information List End-->
@@ -393,10 +392,10 @@
                         <ul class="footer-widget-link">
                             <li><a href="practice-areas-1.html">Practice Areas</a></li>
                             <li><a href="case-results.html">Case Results</a></li>
-                            <li><a href="http://localhost:8000/about">Our Firm</a></li>
+                            <li><a href="{% url 'about' %}">Our Firm</a></li>
                             <li><a href="careers.html">Careers</a></li>
-                            <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
-                            <li><a href="http://localhost:8000/ontact">Contact Us</a></li>
+                            <li><a href="{% url 'faq' %}">F.A.Q</a></li>
+                            <li><a href="{% url 'contact' %}">Contact Us</a></li>
                         </ul>
                     </div>
                     <!--Footer Widget End-->
