--- a/projectgeneral/templates/faq.html
+++ b/projectgeneral/templates/faq.html
@@ -5,136 +5,136 @@
 
 
 
-    <div class="main-wrapper">
+<div class="main-wrapper">
 
-        <!--Header Section Start-->
-        <div class="header-section d-none d-lg-block">
+    <!--Header Section Start-->
+    <div class="header-section d-none d-lg-block">
 
-            <!--Header Top Start-->
-            <div class="header-top">
-                <div class="container">
-                    <div class="row">
-
-                        <!--Left Start-->
-                        <div class="col-lg-6">
-                            <div class="header-top-left">
-                                <div class="header-top-left-info">
-                                    <p><i class="fa fa-envelope-o"></i><a href="mailto:ebulzade@inbox.ru">Send mail to me</a></p>
-                                    <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Left End-->
-
-                        <!--Right Start-->
-                        <div class="col-lg-6">
-                            <div class="header-top-right">
-                                <p class="header-top-right-text">Add an interesting message for your visitors</p>
-                                <a href="http://localhost:8000/cart" class="header-top-right-cart">
-                                    <i class="ion-bag" data-count="2"></i> $43.00
-                                </a>
-                            </div>
-                        </div>
-                        <!--Right End-->
-
-                    </div>
-                </div>
-            </div>
-            <!--Header Top End-->
-
-            <!--Header Middle Start-->
-            <div class="header-middle">
-                <div class="row no-gutters">
+        <!--Header Top Start-->
+        <div class="header-top">
+            <div class="container">
+                <div class="row">
 
                     <!--Left Start-->
-                    <div class="header-middle-left col-auto">
-                        <div class="header-middle-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                            <a href="#"><i class="fa fa-vimeo"></i></a>
+                    <div class="col-lg-6">
+                        <div class="header-top-left">
+                            <div class="header-top-left-info">
+                                <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
+                                <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
+                            </div>
                         </div>
                     </div>
                     <!--Left End-->
 
-                    <!--Center Start-->
-                    <div class="header-middle-center col">
-                        <div class="header-logo">
-                            <a href="http://localhost:8000"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
-                        </div>
-                    </div>
-                    <!--Center End-->
-
                     <!--Right Start-->
-                    <div class="header-middle-right col-auto">
-                        <div class="header-middle-free-case">
-                            <a href="http://localhost:8000/contact"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
+                    <div class="col-lg-6">
+                        <div class="header-top-right">
+                            <p class="header-top-right-text">Add an interesting message for your visitors</p>
+                            <a href="{% url 'cart' %}" class="header-top-right-cart">
+                                <i class="ion-bag" data-count="2"></i> $43.00
+                            </a>
                         </div>
                     </div>
                     <!--Right End-->
 
                 </div>
             </div>
-            <!--Header Middle End-->
+        </div>
+        <!--Header Top End-->
 
-            <!--Header Bottom Start-->
-            <div class="header-bottom">
-                <div class="container">
-                    <div class="row">
+        <!--Header Middle Start-->
+        <div class="header-middle">
+            <div class="row no-gutters">
 
-                        <!--Left Start-->
-                        <div class="col">
-                            <div class="primary-menu">
-                                <nav>
-                                    <ul>
-                                        <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
-                                           
-                                        </li>
-                                        
-                                       
-                                        <li class="menu-item-has-children"><a href="#">Our Firm</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
-                                                
-                                            </ul>
-                                        </li>
-                                        
-                                        <li class="menu-item-has-children"><a href="http://localhost:8000/shop">Shop</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="http://localhost:8000/shop">Shop</a></li>
-                                                <li><a href="http://localhost:8000/productdetail">Product Details</a></li>
-                                                <li><a href="http://localhost:8000/cart">Shopping Cart</a></li>
-                                                
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children"><a href="#">Pages</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="http://localhost:8000/about">About us</a></li>
-                                                <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
-                                                <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
-                                                
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                        <!--Left End-->
-
-                        <!--Right Start-->
-                        <div class="col-auto">
-                            <button class="header-bottom-search-toggle header-search-toggle" data-target="#fullscreen-search-overlay"><i class="fa fa-search"></i></button>
-                        </div>
-                        <!--Right End-->
-
+                <!--Left Start-->
+                <div class="header-middle-left col-auto">
+                    <div class="header-middle-social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-youtube-play"></i></a>
+                        <a href="#"><i class="fa fa-vimeo"></i></a>
                     </div>
                 </div>
-            </div>
-            <!--Header Bottom End-->
+                <!--Left End-->
 
+                <!--Center Start-->
+                <div class="header-middle-center col">
+                    <div class="header-logo">
+                        <a href="{% url 'home' %}"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
+                    </div>
+                </div>
+                <!--Center End-->
+
+                <!--Right Start-->
+                <div class="header-middle-right col-auto">
+                    <div class="header-middle-free-case">
+                        <a href="{% url 'contact' %}"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
+                    </div>
+                </div>
+                <!--Right End-->
+
+            </div>
         </div>
-        <!--Header Section End-->
+        <!--Header Middle End-->
+
+        <!--Header Bottom Start-->
+        <div class="header-bottom">
+            <div class="container">
+                <div class="row">
+
+                    <!--Left Start-->
+                    <div class="col">
+                        <div class="primary-menu">
+                            <nav>
+                                <ul>
+                                    <li class="menu-item-has-children"><a href="{% url 'home' %}">Home</a>
+                                        
+                                    </li>
+                                    
+                                   
+                                    <li class="menu-item-has-children"><a href="#">Our Firm</a>
+                                        <ul class="sub-menu">
+                                            <li><a href="{% url 'attorneys' %}">Attorneys</a></li>
+                                            
+                                        </ul>
+                                    </li>
+                                    
+                                    <li class="menu-item-has-children"><a href="{% url 'shop' %}">Shop</a>
+                                        <ul class="sub-menu">
+                                            <li><a href="{% url 'shop' %}">Shop</a></li>
+                                            <li><a href="{% url 'productdetail' %}">Product Details</a></li>
+                                            <li><a href="{% url 'cart' %}">Shopping Cart</a></li>
+                                            
+                                        </ul>
+                                    </li>
+                                    <li class="menu-item-has-children"><a href="#">Pages</a>
+                                        <ul class="sub-menu">
+                                            <li><a href="{% url 'about' %}">About us</a></li>
+                                            <li><a href="{% url 'contact' %}">Contact us 1</a></li>
+                                            <li><a href="{% url 'faq' %}">F.A.Q</a></li>
+                                            
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <!--Left End-->
+
+                    <!--Right Start-->
+                    <div class="col-auto">
+                        <button class="header-bottom-search-toggle header-search-toggle" data-target="#fullscreen-search-overlay"><i class="fa fa-search"></i></button>
+                    </div>
+                    <!--Right End-->
+
+                </div>
+            </div>
+        </div>
+        <!--Header Bottom End-->
+
+    </div>
+    <!--Header Section End-->
 
 
        
@@ -149,9 +149,9 @@
                 <div class="offcanvas-menu">
                     <nav>
                         <ul>
-                            <li class="menu-item-has-children"><a href="http://localhost:8000/">Home</a>
+                            <li class="menu-item-has-children"><a href="{% url 'home' %}">Home</a>
                                 <ul class="sub-menu">
-                                    <li><a href="http://localhost:8000/">Homepage 01</a></li>
+                                    <li><a href="{% url 'home' %}">Homepage 01</a></li>
                                     <li><a href="index-2.html">Homepage 02</a></li>
                                     <li><a href="index-3.html">Homepage 03</a></li>
                                     <li><a href="index-4.html">Homepage 04</a></li>
@@ -176,8 +176,8 @@
                             <li><a href="case-results.html">Case Results</a></li>
                             <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                 <ul class="sub-menu">
-                                    <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
-                                    <li><a href="http://localhost:8000/singleattorney">Single Attorney</a></li>
+                                    <li><a href="{% url 'attorneys' %}">Attorneys</a></li>
+                                    <li><a href="{% url 'singleattorney' %}">Single Attorney</a></li>
                                     <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
                                     <li><a href="careers.html">Careers</a></li>
                                 </ul>
@@ -189,12 +189,12 @@
                                     <li><a href="news-details.html">News Details</a></li>
                                 </ul>
                             </li>
-                            <li class="menu-item-has-children"><a href="http://localhost:8000/shop">Shop</a>
+                            <li class="menu-item-has-children"><a href="{% url 'shop' %}">Shop</a>
                                 <ul class="sub-menu">
-                                    <li><a href="http://localhost:8000/shop.html">Shop</a></li>
+                                    <li><a href="{% url 'shop' %}">Shop</a></li>
                                     <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                    <li><a href="product-details.html">Product Details</a></li>
-                                    <li><a href="cart.html">Shopping Cart</a></li>
+                                    <li><a href="{% url 'productdetail' %}">Product Details</a></li>
+                                    <li><a href="{% url 'cart' %}">Shopping Cart</a></li>
                                     <li><a href="checkout.html">Checkout</a></li>
                                     <li><a href="login-register.html">Login & Register</a></li>
                                     <li><a href="my-account.html">My Account</a></li>
@@ -203,10 +203,10 @@
                             </li>
                             <li class="menu-item-has-children"><a href="#">Pages</a>
                                 <ul class="sub-menu">
-                                    <li><a href="http://localhost:8000/about">About us</a></li>
-                                    <li><a href="contact-us-1.html">Contact us 1</a></li>
+                                    <li><a href="{% url 'about' %}">About us</a></li>
+                                    <li><a href="{% url 'contact' %}">Contact us 1</a></li>
                                     <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                    <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
+                                    <li><a href="{% url 'faq' %}">F.A.Q</a></li>
                                     <li><a href="gallery.html">Gallery</a></li>
                                 </ul>
                             </li>
@@ -255,7 +255,7 @@
 
                         <h1 class="page-title">F.A.Q</h1>
                         <ul class="page-breadcrumb">
-                            <li><a href="http://localhost:8000/">Home</a></li>
+                            <li><a href="{% url 'home' %}">Home</a></li>
                             <li>F.A.Q</li>
                         </ul>
 
